--- a/addon/templates/components/basic-dropdown-content.hbs
+++ b/addon/templates/components/basic-dropdown-content.hbs
@@ -5,23 +5,21 @@
       {{#if overlay}}
         <div class="ember-basic-dropdown-overlay"></div>
       {{/if}}
-      {{#let (element (or @htmlTag "div")) as |Element|}}
-        <Element
-          id={{this.dropdownId}}
-          class="ember-basic-dropdown-content ember-basic-dropdown-content--{{@hPosition}} ember-basic-dropdown-content--{{@vPosition}} {{this.animationClass}}{{if @renderInPlace " ember-basic-dropdown-content--in-place"}} {{@defaultClass}}"
-          style={{this.style}}
-          dir={{@dir}}
-          {{did-insert this.setup}}
-          {{did-insert @dropdown.actions.reposition}}
-          {{did-insert this.setupMutationObserver}}
-          {{did-insert this.animateIn}}
-          {{will-destroy this.teardownMutationObserver}}
-          {{will-destroy this.animateOut}}
-          {{will-destroy this.teardown}}
-          ...attributes>
-          {{yield}}
-        </Element>
-      {{/let}}
+      <div
+        id={{this.dropdownId}}
+        class="ember-basic-dropdown-content ember-basic-dropdown-content--{{@hPosition}} ember-basic-dropdown-content--{{@vPosition}} {{this.animationClass}}{{if @renderInPlace " ember-basic-dropdown-content--in-place"}} {{@defaultClass}}"
+        style={{this.style}}
+        dir={{@dir}}
+        {{did-insert this.setup}}
+        {{did-insert @dropdown.actions.reposition}}
+        {{did-insert this.setupMutationObserver}}
+        {{did-insert this.animateIn}}
+        {{will-destroy this.teardownMutationObserver}}
+        {{will-destroy this.animateOut}}
+        {{will-destroy this.teardown}}
+        ...attributes>
+        {{yield}}
+      </div>
     {{/maybe-in-element}}
   </div>
 {{else}}
