--- a/addon/templates/components/basic-dropdown-trigger.hbs
+++ b/addon/templates/components/basic-dropdown-trigger.hbs
@@ -1,20 +1,18 @@
-{{#let (element (or @htmlTag "div")) as |Element|}}
-  <Element
-    class="ember-basic-dropdown-trigger{{if @renderInPlace " ember-basic-dropdown-trigger--in-place"}}{{if @hPosition (concat " ember-basic-dropdown-trigger--" @hPosition)}}{{if @vPosition (concat " ember-basic-dropdown-trigger--" @vPosition)}} {{@defaultClass}}"
-    role="button"
-    tabindex={{unless @dropdown.disabled "0"}}
-    data-ebd-id="{{@dropdown.uniqueId}}-trigger"
-    aria-owns="ember-basic-dropdown-content-{{@dropdown.uniqueId}}"
-    aria-expanded={{if @dropdown.isOpen "true"}}
-    aria-disabled={{if @dropdown.disabled "true"}}
-    {{will-destroy this.removeGlobalHandlers}}
-    ...attributes
-    {{on "mousedown" this.handleMouseDown}}
-    {{on "click" this.handleClick}}
-    {{on "keydown" this.handleKeyDown}}
-    {{on "touchstart" this.handleTouchStart}}
-    {{on "touchend" this.handleTouchEnd}}
-    >
-    {{yield}}
-  </Element>
-{{/let}}
+<div
+  class="ember-basic-dropdown-trigger{{if @renderInPlace " ember-basic-dropdown-trigger--in-place"}}{{if @hPosition (concat " ember-basic-dropdown-trigger--" @hPosition)}}{{if @vPosition (concat " ember-basic-dropdown-trigger--" @vPosition)}} {{@defaultClass}}"
+  role="button"
+  tabindex={{unless @dropdown.disabled "0"}}
+  data-ebd-id="{{@dropdown.uniqueId}}-trigger"
+  aria-owns="ember-basic-dropdown-content-{{@dropdown.uniqueId}}"
+  aria-expanded={{if @dropdown.isOpen "true"}}
+  aria-disabled={{if @dropdown.disabled "true"}}
+  {{will-destroy this.removeGlobalHandlers}}
+  ...attributes
+  {{on "mousedown" this.handleMouseDown}}
+  {{on "click" this.handleClick}}
+  {{on "keydown" this.handleKeyDown}}
+  {{on "touchstart" this.handleTouchStart}}
+  {{on "touchend" this.handleTouchEnd}}
+  >
+  {{yield}}
+</div>
